--- a/Guids/easy/main.css
+++ b/Guids/easy/main.css
@@ -54,6 +54,24 @@ h1 {
 	padding: 15px;
 }
 
+h2 {
+  padding:40px 20%;
+  color: var(--clr-tekst);
+  text-align: center;
+}
+
+h3 {
+  padding:40px 20px;
+  color: var(--clr-tekst);
+  text-align: left;
+  font-size: 16pt;
+}
+
+#center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .content-container {
     display: flex;
