--- a/Guids/easy/main.css
+++ b/Guids/easy/main.css
@@ -5,6 +5,30 @@
     overflow:hidden;
 }
 
+.arrow-keys {
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 30px;
+  color: var(--clr-amazonitt);
+  font-size: 35pt;
+}
+
+.arrow-keys span {
+  margin: 0 50px;
+  cursor: pointer;
+}
+
+.arrow-left {
+  cursor: pointer;
+}
+
+.arrow-right {
+  cursor: pointer;
+}
+
+
 :root {
     --clr-main: #14151f;
     --clr-tekst: #a8a8a8;
@@ -34,11 +58,11 @@ body {
 }
 
 .pages {
-	width:800%;  /* 8 times original*/
+	width:700%;  /* 7 times original*/
 }
 .page { 
 	height:100vh;
-	width:12.5%;  /* 100 by 8 */
+	width:14.28571428571429%;  /* 100 by 7 */
 	float: left;
 }
 /* .page1 { background: red; }
@@ -52,6 +76,7 @@ h1 {
 	width: 250px;
 	background: var(--clr-tekstBoks);
 	padding: 15px;
+  border-bottom-right-radius: clamp(0.8rem, 1.2rem, 1.2vw);
 }
 
 h2 {
@@ -178,7 +203,44 @@ h3 {
         width: 70%;
         height: 30%;
     }
+
+
+    .arrow-keys {
+      visibility: hidden;
+    }
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 10px;
+  height: 100%;
+  margin-top: 10%;
+}
+
+.grid-item {
+  position: relative;
+}
+
+.grid-item img {
+  max-width: 80%;
+  max-height: 80%;
+  margin-left: 25%;
+}
+
+.grid-item p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Background color for the text */
+  color: white; /* Text color */
+  margin: 0;
+  padding: 1px; 
+  text-align: center;
+}
+
 
 
 /* Code snippel */
